--- a/resources/scss/partials/_home.scss
+++ b/resources/scss/partials/_home.scss
@@ -26,8 +26,14 @@
     margin-bottom: .8rem;
 }
 
-@media (max-width: 600px) {
+@media (max-width: 800px) {
     .page-home .main-generic article img:first-of-type {
         max-width: 50%;
+    }
+}
+
+@media (max-width: 600px) {
+    .page-home .main-generic article img:first-of-type {
+        max-width: 100%;
     }
 }
